prometheus-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: "enabled"
  name: prometheus
